# batglass

./: .env  .gitignore  .gitmodules  LICENSE  README.md  batglass.service  calibrate_sensor.py  config.yaml  echolocation.py  proximity_beep.py  pyproject.toml  run_buttons.sh  scene_button_trigger.py  scene_description.py  test_sensor.py
.devcontainer/: Brewfile  build.sh  devcontainer.json
docs/: environment.md  hardware.md  plan.md
docs/camera/: OCR script.md  arducam-setup.md
docs/diagrams/: class.puml
scripts/: ocr_camera.py  snap_ocr.py
src/batglass/: audio.py  gemini_live.py  gemini_vlm.py  hailo_vlm.py  ocr_engine.py  stt.py  tts.py  vlm.py
src/batglass/modes/: ocr.py  scene.py
src/buttons/: __init__.py  __main__.py  artifacts.py  beep_button.py  ocr_button.py  scene_button.py  volume_button.py
src/camera_ocr/: __init__.py  __main__.py  camera.py  cli.py  ocr.py  snap_cli.py  vlm.py
src/proximity/: __init__.py  __main__.py  beep.py  controller.py  sensor.py
