[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camera_ocr", "src/proximity", "src/batglass", "src/buttons"]

[project]
name = "batglass"
version = "0.1.0"
description = "Smart glasses: OCR camera + proximity beep for Raspberry Pi"
requires-python = ">=3.11"
dependencies = [
    "google-genai",
    "opencv-python>=4.8",
    "pytesseract>=0.3",
    "pillow>=10.0",
    "numpy>=1.24",
    "piper-tts>=1.4.1",
    "pathvalidate>=3.3.1",
    "rapidocr-onnxruntime>=1.4.4",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
vlm = [
    "ollama",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
batglass-ocr = "camera_ocr.cli:main"
batglass-snap = "camera_ocr.snap_cli:main"
batglass-beep = "proximity.__main__:main"
batglass-buttons = "buttons.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
